deploy/step-2-ambient-agw/namespace-ambient.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    istio.io/dataplane-mode: ambient
